# image-edge-detection-cpp

./: .gitignore  CMakeLists.txt  LICENSE
docs/: README.md  edge_detector_architecture.puml
include/: EdgeDetector.h  Image.h
src/: EdgeDetector.cpp  Image.cpp  main.cpp
tests/: test_suite.cpp
